# AutoDev

./: .gitignore  LICENSE  README.md  package.json  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: architecture.md
docs/design_documentation/: adapters.md  adapters_design.md  adr_template.md  agents.md  agents_design.md  cli_design.md  config_system_design.md  cost.md  design_document_template.md  guardrails_design.md  knowledge_system_design.md  orchestrator_design.md  plugin_system_design.md  qa_gates_design.md  state_management_design.md  tournament_engine_design.md  tournaments.md
examples/: README.md
examples/jwt_auth/: README.md  spec.md
examples/subtract/: __init__.py  math.py
npm/: .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
npm/scripts/: bundle-wheel.js
npm/src/: index.ts
src/: _version.py  autologging.py  errors.py
src/adapters/: __init__.py  base.py  claude_code.py  cursor.py  detect.py  git_utils.py  inline.py  inline_config.py  inline_types.py  types.py
src/agents/: __init__.py  render_claude.py  render_cursor.py  tool_map.py
src/cli/: __init__.py
src/config/: __init__.py  defaults.py  loader.py  schema.py
src/design_decision/: adr-001-stateless-subprocess-invocations.md  adr-002-append-only-jsonl-ledger-with-cas.md  adr-003-borda-count-tournament-algorithm.md  adr-004-two-tier-knowledge-with-jaccard-dedup.md  adr-005-protocol-based-plugin-system.md  adr-006-platform-adapter-abstraction.md  (+4 more)
src/plugins/: __init__.py  (+1 more)
tests/: conftest.py  helpers.py  stub_adapter.py  test_adapter_base.py  test_adapter_claude.py  test_adapter_cursor.py  test_adapter_detect.py  test_adapter_inline.py  test_adapter_live.py  test_adapter_types.py  test_agents_registry.py  test_autologging.py  test_cli_doctor_plugins.py  test_cli_execute.py  test_cli_init.py  test_cli_inline.py  test_cli_plan.py  test_cli_plugins.py  test_cli_prune_reset.py  test_cli_resume.py  test_cli_smoke.py  test_cli_status.py  test_cli_tournament.py  test_cli_tournament_impl.py  test_config_defaults.py  test_config_schema.py  test_e2e_tiny_repo.py  test_execute_phase_record_lessons.py  test_execute_phase_with_tournament.py  test_git_utils.py  test_guardrails_enforcer.py  test_guardrails_loop_detector.py  test_impl_tournament_auto_disabled.py  test_impl_tournament_handler.py  test_impl_tournament_integration.py  test_impl_tournament_runner.py  test_impl_tournament_worktree.py  test_inline_config.py  test_inline_state.py  test_inline_types.py  (+40 more)
(+84 files in other folders)
