[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autodev"
dynamic = ["version"]
description = "Multi-agent orchestrator with tournament-based self-refinement for Claude Code, Cursor, and any LLM-assisted IDE"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Mohamed Ameen", email = "mohamed@example.com"},
]
keywords = [
    "ai",
    "agents",
    "autonomous",
    "claude-code",
    "cursor",
    "llm",
    "multi-agent",
    "orchestration",
    "swarm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.1",
    "pydantic>=2.6",
    "filelock>=3.13",
    "httpx>=0.27",
    "rich>=13.7",
    "tenacity>=8.2",
    "pyyaml>=6.0",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.0",
    "pytest-cov>=4.1",
]

[project.urls]
Homepage = "https://github.com/mohamedameen/autodev"
Documentation = "https://github.com/mohamedameen/autodev#readme"
Repository = "https://github.com/mohamedameen/autodev"
Issues = "https://github.com/mohamedameen/autodev/issues"
Changelog = "https://github.com/mohamedameen/autodev/releases"

[project.scripts]
autodev = "cli:main"

[tool.hatch.version]
path = "src/_version.py"

[tool.hatch.build.targets.wheel]
packages = [
    "src/adapters",
    "src/agents",
    "src/cli",
    "src/config",
    "src/guardrails",
    "src/orchestrator",
    "src/plugins",
    "src/qa",
    "src/state",
    "src/tournament",
]

[tool.hatch.build.targets.wheel.force-include]
"src/errors.py" = "errors.py"
"src/autologging.py" = "autologging.py"
"src/_version.py" = "_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
